Avoid overlapping links, again
As indicated in

https://github.com/git-for-windows/git-for-windows.github.io/commit/6dff8ae8b4#commitcomment-22378751

--- a/css/small.css
+++ b/css/small.css
@@ -10,7 +10,7 @@
 	}
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 750px) {
 	html {
 		font-size: 16px;
 	}
